--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ Temporary Items
 */__debug_bin
 QuizGame/QuizGame
 */Choose_Your_Own_Adventure
+Choose Your Own Adventure/Choose_Your_Own_Adventure
