--- a/.gitignore
+++ b/.gitignore
@@ -67,5 +67,5 @@ Temporary Items
 # End of https://www.toptal.com/developers/gitignore/api/go,macos,visualstudiocode
 */__debug_bin
 QuizGame/QuizGame
-*/Choose_Your_Own_Adventure
 Choose Your Own Adventure/Choose_Your_Own_Adventure
+Sitemap Builder/sitemap-builder
